# minireq

./: .gitignore  COPYING.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.github/workflows/: lint.yml  msrv.yml  unit-tests.yml
examples/: async_hello.rs  hello.rs  iterator.rs  json.rs  wasm_example.rs
src/: connection.rs  error.rs  http_url.rs  lib.rs  proxy.rs  request.rs  response.rs  wasm.rs
src/connection/: rustls_stream.rs
tests/: main.rs  setup.rs
